force-app/main/default/objects/Opportunity/fields/Account_Name_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Opportunity_Name__c</fullName>
    <formula>HYPERLINK(&#39;/&#39;&amp;Id, Account.Name  &amp; &#39; - &#39; &amp;  Name )</formula>
    <label>Account Name - Opportunity Name</label>
    <type>Text</type>
</CustomField>