force-app/main/default/objects/Opportunity/fields/Approved_by_BU_Head__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_BU_Head__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved by Manager</label>
    <type>Checkbox</type>
</CustomField>