force-app/main/default/objects/Opportunity/fields/Change_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Request_Type__c</fullName>
    <label>Change Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Timeline Change</fullName>
            </value>
            <value>
                <fullName>Scope Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>