force-app/main/default/objects/Opportunity/fields/ID_18__c.field-meta.xml
<CustomField>
    <fullName>ID_18__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID 18</label>
    <type>Text</type>
</CustomField>