force-app/main/default/objects/Opportunity/fields/Invoicing_Milestone_Rev_Total__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Milestone_Rev_Total__c</fullName>
    <label>Invoicing Milestone Rev Total</label>
    <summarizedField>OA_Revenue_Forecast__c.OA_Invoice_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>OA_Revenue_Forecast__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Invoice Milestone</value>
    </summaryFilterItems>
    <summaryForeignKey>OA_Revenue_Forecast__c.OA_Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>