force-app/main/default/objects/Opportunity/fields/NAV_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>NAV_Project_ID__c</fullName>
    <label>NAV Project ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>