force-app/main/default/objects/Opportunity/fields/NAV_Proposal_ID__c.field-meta.xml
<CustomField>
    <fullName>NAV_Proposal_ID__c</fullName>
    <label>NAV Proposal ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>