force-app/main/default/objects/Opportunity/fields/Number_of_Delivery_Milestone_records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Delivery_Milestone_records__c</fullName>
    <label>Number of Delivery Milestone records</label>
    <summaryFilterItems>
        <field>OA_Revenue_Forecast__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Delivery Milestone</value>
    </summaryFilterItems>
    <summaryForeignKey>OA_Revenue_Forecast__c.OA_Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>