force-app/main/default/objects/Opportunity/fields/OA_Change_Request_Amount__c.field-meta.xml
<CustomField>
    <fullName>OA_Change_Request_Amount__c</fullName>
    <formula>OA_Parent_Project__r.Amount +  Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change Request Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>