force-app/main/default/objects/Opportunity/fields/OA_Client_Type__c.field-meta.xml
<CustomField>
    <fullName>OA_Client_Type__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Client</fullName>
                <label>External Client</label>
            </value>
            <value>
                <fullName>Internal Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>