force-app/main/default/objects/Opportunity/fields/OA_Competency__c.field-meta.xml
<CustomField>
    <fullName>OA_Competency__c</fullName>
    <label>Grail Delivery Competency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assess Opportunities</fullName>
            </value>
            <value>
                <fullName>Monitor Markets</fullName>
            </value>
            <value>
                <fullName>Collect Customer Insights and Intelligence</fullName>
            </value>
            <value>
                <fullName>Optimize Business Operations</fullName>
            </value>
            <value>
                <fullName>Activate Sales Strategy</fullName>
            </value>
            <value>
                <fullName>Knowledge Optimization</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Competency 1</fullName>
                <isActive>false</isActive>
                <label>Competency 1</label>
            </value>
            <value>
                <fullName>Competency 2</fullName>
                <isActive>false</isActive>
                <label>Competency 2</label>
            </value>
            <value>
                <fullName>Competency 3</fullName>
                <isActive>false</isActive>
                <label>Competency 3</label>
            </value>
            <value>
                <fullName>Competency 4</fullName>
                <isActive>false</isActive>
                <label>Competency 4</label>
            </value>
            <value>
                <fullName>Competency 5</fullName>
                <isActive>false</isActive>
                <label>Competency 5</label>
            </value>
            <value>
                <fullName>Competency 6</fullName>
                <isActive>false</isActive>
                <label>Competency 6</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>