force-app/main/default/objects/Opportunity/fields/OA_CR_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>OA_CR_Submission_Date__c</fullName>
    <label>CR Submission Date</label>
    <type>Date</type>
</CustomField>