force-app/main/default/objects/Opportunity/fields/OA_CY_Revenue__c.field-meta.xml
<CustomField>
    <fullName>OA_CY_Revenue__c</fullName>
    <label>CY Revenue</label>
    <summarizedField>OA_Revenue_Forecast__c.OA_Total_Sales_Revenue_Incl_CRs__c</summarizedField>
    <summaryFilterItems>
        <field>OA_Revenue_Forecast__c.OA_Revenue_Flow__c</field>
        <operation>equals</operation>
        <value>C</value>
    </summaryFilterItems>
    <summaryForeignKey>OA_Revenue_Forecast__c.OA_Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>