force-app/main/default/objects/Opportunity/fields/OA_Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>OA_Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offsite FTE</fullName>
            </value>
            <value>
                <fullName>Ad-hoc</fullName>
            </value>
            <value>
                <fullName>OnSite FTE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>