force-app/main/default/objects/Opportunity/fields/OA_Expected_Revenue_Custom__c.field-meta.xml
<CustomField>
    <fullName>OA_Expected_Revenue_Custom__c</fullName>
    <formula>IF( ISPICKVAL( StageName ,&#39;Closed Won&#39;)  ,  OA_Total_Project_Cost__c ,  ExpectedRevenue )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>