force-app/main/default/objects/Opportunity/fields/OA_Expenses_OPEs__c.field-meta.xml
<CustomField>
    <fullName>OA_Expenses_OPEs__c</fullName>
    <label>Expected Expenses (OPEs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>