force-app/main/default/objects/Opportunity/fields/OA_Invoice_Percentage__c.field-meta.xml
<CustomField>
    <fullName>OA_Invoice_Percentage__c</fullName>
    <label>OA_Invoice Percentage</label>
    <summarizedField>OA_Revenue_Forecast__c.OA_Percentage_Invoiced__c</summarizedField>
    <summaryFilterItems>
        <field>OA_Revenue_Forecast__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Invoice Milestone</value>
    </summaryFilterItems>
    <summaryForeignKey>OA_Revenue_Forecast__c.OA_Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>