force-app/main/default/objects/Opportunity/fields/OA_Lead_Source_of_Opportunity_Originator__c.field-meta.xml
<CustomField>
    <fullName>OA_Lead_Source_of_Opportunity_Originator__c</fullName>
    <label>Lead Source of Opportunity Originator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertisements</fullName>
            </value>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Conference/ Trade Show</fullName>
            </value>
            <value>
                <fullName>Grail Website</fullName>
            </value>
            <value>
                <fullName>Inbound Call</fullName>
            </value>
            <value>
                <fullName>Deloitte Employee</fullName>
            </value>
            <value>
                <fullName>Personal Contact</fullName>
            </value>
            <value>
                <fullName>PR/ Read About Us in Media or Online</fullName>
            </value>
            <value>
                <fullName>Prior Business Relationship</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>