force-app/main/default/objects/Opportunity/fields/OA_Location__c.field-meta.xml
<CustomField>
    <fullName>OA_Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Noida</fullName>
            </value>
            <value>
                <fullName>Beijing</fullName>
            </value>
            <value>
                <fullName>Johannesburg</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>