force-app/main/default/objects/Opportunity/fields/OA_Offerings__c.field-meta.xml
<CustomField>
    <fullName>OA_Offerings__c</fullName>
    <label>Offerings</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industry and Country Analysis</fullName>
            </value>
            <value>
                <fullName>Market Sizing and Forecasting</fullName>
            </value>
            <value>
                <fullName>Opportunity Evaluation</fullName>
            </value>
            <value>
                <fullName>Partner Scouting</fullName>
            </value>
            <value>
                <fullName>Investment Evaluation</fullName>
            </value>
            <value>
                <fullName>Target Identification</fullName>
            </value>
            <value>
                <fullName>Trend Spotting/Future Trend Analysis</fullName>
            </value>
            <value>
                <fullName>Market Forecasting</fullName>
            </value>
            <value>
                <fullName>Supply Chain Assessment</fullName>
            </value>
            <value>
                <fullName>Pricing Strategy</fullName>
            </value>
            <value>
                <fullName>Industry Tracking</fullName>
            </value>
            <value>
                <fullName>Newsletters</fullName>
            </value>
            <value>
                <fullName>Regulatory/Legislative Research &amp; Tracking</fullName>
            </value>
            <value>
                <fullName>Organization Structure Mapping</fullName>
            </value>
            <value>
                <fullName>Marketing Strategy Evaluation</fullName>
            </value>
            <value>
                <fullName>Technology Scan</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Advertisements</fullName>
            </value>
            <value>
                <fullName>Ideas</fullName>
            </value>
            <value>
                <fullName>Vendor Analytics</fullName>
            </value>
            <value>
                <fullName>Contract Negotiation</fullName>
            </value>
            <value>
                <fullName>Contract Compliance</fullName>
            </value>
            <value>
                <fullName>Budgeting &amp; Planning</fullName>
            </value>
            <value>
                <fullName>Metrics Reporting</fullName>
            </value>
            <value>
                <fullName>Invoice and Management</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>