force-app/main/default/objects/Opportunity/fields/OA_Opportunity_Originator__c.field-meta.xml
<CustomField>
    <fullName>OA_Opportunity_Originator__c</fullName>
    <label>Opportunity Originator</label>
    <length>250</length>
    <type>Text</type>
</CustomField>