force-app/main/default/objects/Opportunity/fields/OA_Owner_Region__c.field-meta.xml
<CustomField>
    <fullName>OA_Owner_Region__c</fullName>
    <formula>TEXT(Owner.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Region</label>
    <type>Text</type>
</CustomField>