force-app/main/default/objects/Opportunity/fields/OA_Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>OA_Parent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Change Request</relationshipLabel>
    <relationshipName>ChangeRequest</relationshipName>
    <type>Lookup</type>
</CustomField>