force-app/main/default/objects/Opportunity/fields/OA_Project_End_Date__c.field-meta.xml
<CustomField>
    <fullName>OA_Project_End_Date__c</fullName>
    <label>Project End Date</label>
    <type>Date</type>
</CustomField>