force-app/main/default/objects/Opportunity/fields/OA_Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>OA_Project_Start_Date__c</fullName>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>