force-app/main/default/objects/Opportunity/fields/OA_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>OA_Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Retainer</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>