force-app/main/default/objects/Opportunity/fields/OA_Proposal_Format__c.field-meta.xml
<CustomField>
    <fullName>OA_Proposal_Format__c</fullName>
    <label>Proposal Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Word Memo</fullName>
            </value>
            <value>
                <fullName>PowerPoint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>