force-app/main/default/objects/Opportunity/fields/OA_Proposal_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>OA_Proposal_Submission_Date__c</fullName>
    <label>Proposal Submission Date</label>
    <type>Date</type>
</CustomField>