force-app/main/default/objects/Opportunity/fields/OA_Proposal_Submission_Date_CSO__c.field-meta.xml
<CustomField>
    <fullName>OA_Proposal_Submission_Date_CSO__c</fullName>
    <description>Field created based on the confirmation provided by Amit</description>
    <label>Proposal Submission Date – CSO</label>
    <type>Date</type>
</CustomField>