force-app/main/default/objects/Opportunity/fields/OA_Proposal_Type__c.field-meta.xml
<CustomField>
    <fullName>OA_Proposal_Type__c</fullName>
    <label>Proposal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pricing &amp; Timing Estimates</fullName>
            </value>
            <value>
                <fullName>Pre-Sales Effort</fullName>
            </value>
            <value>
                <fullName>Capability Deck</fullName>
            </value>
            <value>
                <fullName>Pilot Project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>