force-app/main/default/objects/Opportunity/fields/OA_Proposed_End_Date__c.field-meta.xml
<CustomField>
    <fullName>OA_Proposed_End_Date__c</fullName>
    <label>Proposed End Date</label>
    <type>Date</type>
</CustomField>