force-app/main/default/objects/Opportunity/fields/OA_Proposed_Fee__c.field-meta.xml
<CustomField>
    <fullName>OA_Proposed_Fee__c</fullName>
    <label>Proposed Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>