force-app/main/default/objects/Opportunity/fields/OA_Proposed_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>OA_Proposed_Start_Date__c</fullName>
    <label>Proposed Start Date</label>
    <type>Date</type>
</CustomField>