force-app/main/default/objects/Opportunity/fields/OA_Rate_Card_Price__c.field-meta.xml
<CustomField>
    <fullName>OA_Rate_Card_Price__c</fullName>
    <description>Field to capture the rate card Cost ONLY. This field will be used for reference purpose only</description>
    <inlineHelpText>Capture the Rate Card Cost without any discount.</inlineHelpText>
    <label>Effort Estimate (EE) Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>