force-app/main/default/objects/Opportunity/fields/OA_Revenue_Total__c.field-meta.xml
<CustomField>
    <fullName>OA_Revenue_Total__c</fullName>
    <description>rollup of the Revenue forecast. System field</description>
    <label>Revenue Total- NOT ON PAGE</label>
    <summarizedField>OA_Revenue_Forecast__c.OA_Sales_Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>OA_Revenue_Forecast__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Delivery Milestone</value>
    </summaryFilterItems>
    <summaryForeignKey>OA_Revenue_Forecast__c.OA_Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>