force-app/main/default/objects/Opportunity/fields/OA_Services__c.field-meta.xml
<CustomField>
    <fullName>OA_Services__c</fullName>
    <label>Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service 1</fullName>
            </value>
            <value>
                <fullName>Service 2</fullName>
            </value>
            <value>
                <fullName>Service 3</fullName>
            </value>
            <value>
                <fullName>Service 4</fullName>
            </value>
            <value>
                <fullName>Service 5</fullName>
            </value>
            <value>
                <fullName>Service 6</fullName>
            </value>
            <value>
                <fullName>Service 7</fullName>
            </value>
            <value>
                <fullName>Service 8</fullName>
            </value>
            <value>
                <fullName>Service 9</fullName>
            </value>
            <value>
                <fullName>Service 10</fullName>
            </value>
            <value>
                <fullName>Service 11</fullName>
            </value>
            <value>
                <fullName>Service 12</fullName>
            </value>
            <value>
                <fullName>Service 13</fullName>
            </value>
            <value>
                <fullName>Service 14</fullName>
            </value>
            <value>
                <fullName>Service 15</fullName>
            </value>
            <value>
                <fullName>Service 16</fullName>
            </value>
            <value>
                <fullName>Service 17</fullName>
            </value>
            <value>
                <fullName>Service 18</fullName>
            </value>
            <value>
                <fullName>Service 19</fullName>
            </value>
            <value>
                <fullName>Service 20</fullName>
            </value>
            <value>
                <fullName>Service 21</fullName>
            </value>
            <value>
                <fullName>Service 22</fullName>
            </value>
            <value>
                <fullName>Service 23</fullName>
            </value>
            <value>
                <fullName>Service 24</fullName>
            </value>
            <value>
                <fullName>Service 25</fullName>
            </value>
            <value>
                <fullName>Service 26</fullName>
            </value>
            <value>
                <fullName>Service 27</fullName>
            </value>
            <value>
                <fullName>Service 28</fullName>
            </value>
            <value>
                <fullName>Service 29</fullName>
            </value>
            <value>
                <fullName>Service 30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>