force-app/main/default/objects/Opportunity/fields/OA_SFDC_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>OA_SFDC_Project_ID__c</fullName>
    <description>This field is to generate SFDC Project ID for Integration. This value will be synced with NAV</description>
    <displayFormat>SFPROJ-{0000000000}</displayFormat>
    <label>SFDC Project ID</label>
    <type>AutoNumber</type>
</CustomField>