force-app/main/default/objects/Opportunity/fields/OA_SFDC_Proposal_ID__c.field-meta.xml
<CustomField>
    <fullName>OA_SFDC_Proposal_ID__c</fullName>
    <description>This is field will generate the SFDC Proposal ID used for integration and will be synced with NAV</description>
    <displayFormat>SFPR-{0000000000}</displayFormat>
    <label>SFDC Proposal ID</label>
    <type>AutoNumber</type>
</CustomField>