force-app/main/default/objects/Opportunity/fields/OA_Solutions__c.field-meta.xml
<CustomField>
    <fullName>OA_Solutions__c</fullName>
    <label>Solutions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Market Entry Assessment</fullName>
            </value>
            <value>
                <fullName>M&amp;A Support</fullName>
            </value>
            <value>
                <fullName>Futurecasting</fullName>
            </value>
            <value>
                <fullName>Competitive Benchmarking</fullName>
            </value>
            <value>
                <fullName>Market Monitoring</fullName>
            </value>
            <value>
                <fullName>Competitive Monitoring</fullName>
            </value>
            <value>
                <fullName>Segmentation and Buyer Personas</fullName>
            </value>
            <value>
                <fullName>Purchase Process</fullName>
            </value>
            <value>
                <fullName>Brand Tracking</fullName>
            </value>
            <value>
                <fullName>Channel and Messaging Analysis</fullName>
            </value>
            <value>
                <fullName>Concept Testing</fullName>
            </value>
            <value>
                <fullName>Business Operations</fullName>
            </value>
            <value>
                <fullName>Financial Planning &amp; Analysis</fullName>
            </value>
            <value>
                <fullName>Product Propensity Analysis</fullName>
            </value>
            <value>
                <fullName>Churn Analysis</fullName>
            </value>
            <value>
                <fullName>Sales Channel Assessment</fullName>
            </value>
            <value>
                <fullName>Partner Program Strategy</fullName>
            </value>
            <value>
                <fullName>Territory Growth Projections</fullName>
            </value>
            <value>
                <fullName>Battle Cards and Sector Storyboards</fullName>
            </value>
            <value>
                <fullName>Marketing Investment Allocation</fullName>
            </value>
            <value>
                <fullName>Knowledge Audit and Synthesis</fullName>
            </value>
            <value>
                <fullName>Research Roadmap</fullName>
            </value>
            <value>
                <fullName>Knowledge System Development</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>