force-app/main/default/objects/Opportunity/fields/OA_Special_Requirement__c.field-meta.xml
<CustomField>
    <fullName>OA_Special_Requirement__c</fullName>
    <label>Special Requirement</label>
    <type>TextArea</type>
</CustomField>