force-app/main/default/objects/Opportunity/fields/OA_Success_Criteria__c.field-meta.xml
<CustomField>
    <fullName>OA_Success_Criteria__c</fullName>
    <label>Success Criteria</label>
    <type>TextArea</type>
</CustomField>