force-app/main/default/objects/Opportunity/fields/OA_Total_Project_Cost__c.field-meta.xml
<CustomField>
    <fullName>OA_Total_Project_Cost__c</fullName>
    <defaultValue>0.00</defaultValue>
    <inlineHelpText>Total Cost of Won Project along with all Won Change Requests</inlineHelpText>
    <label>Final Price to Client</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>