force-app/main/default/objects/Opportunity/fields/OA_Total_Revenue_Recognized_Fin__c.field-meta.xml
<CustomField>
    <fullName>OA_Total_Revenue_Recognized_Fin__c</fullName>
    <description>Read Only field; will be updated via code.</description>
    <label>Total Revenue Recognized (Fin)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>