force-app/main/default/objects/Opportunity/fields/OA_Variance__c.field-meta.xml
<CustomField>
    <fullName>OA_Variance__c</fullName>
    <formula>OA_Total_Project_Cost__c - OA_Total_Revenue_Recognized_Fin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>