force-app/main/default/objects/Opportunity/fields/Owner_s_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Manager_Email__c</fullName>
    <description>This field holds teh email Id for the Owner&#39;s regional lead</description>
    <label>Owner&#39;s Manager Email</label>
    <type>Email</type>
</CustomField>