force-app/main/default/objects/Opportunity/fields/Owners_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Owners_Manager_Email__c</fullName>
    <label>Owners Manager Email</label>
    <type>Email</type>
</CustomField>