force-app/main/default/objects/Opportunity/fields/Price_By__c.field-meta.xml
<CustomField>
    <fullName>Price_By__c</fullName>
    <label>Price By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>