force-app/main/default/objects/Opportunity/fields/Weighted_Pipeline_Gross_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Pipeline_Gross_Pipeline__c</fullName>
    <formula>IF( Amount=0 ,0, ExpectedRevenue / Amount)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Pipeline / Gross Pipeline %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>