force-app/main/default/objects/Opportunity/recordTypes/Change_Request.recordType-meta.xml
<RecordType>
    <fullName>Change_Request</fullName>
    <active>true</active>
    <businessProcess>Change Request</businessProcess>
    <description>Only to Capture Change Request for an Ongoing Project</description>
    <label>Change Request</label>
</RecordType>