force-app/main/default/objects/Opportunity/recordTypes/Project.recordType-meta.xml
<RecordType>
    <fullName>Project</fullName>
    <active>true</active>
    <businessProcess>Project</businessProcess>
    <description>Default Record Type, to capture all Opportunities (Prospective Projects)</description>
    <label>Project</label>
</RecordType>